Bug#32413, "Memory usage not constrained by falcon_record_memory_max, assertion failure"

- Changed MemRecordMgrSetMaxRecordMember() to allow dynamic changes to falcon_record_memory_max.
- Correct thawed byte accounting.